--- a/arch/arm/boot/dts/am335x-boneblack.dts
+++ b/arch/arm/boot/dts/am335x-boneblack.dts
@@ -51,6 +51,10 @@
 	pinctrl-0 = <&clkout2_pin>;
 };
 
+&rtc {
+	ti,system-power-controller;
+};
+
 #include "am335x-boneblack-emmc.dtsi"
 /* HDMI: without audio */
 #include "am335x-boneblack-nxp-hdmi-no-audio.dtsi"
