--- a/arch/arm/boot/dts/am335x-bone-uboot-univ.dts
+++ b/arch/arm/boot/dts/am335x-bone-uboot-univ.dts
@@ -6,16 +6,20 @@
 
 #include "am33xx.dtsi"
 #include "am335x-bone-common.dtsi"
-/* #include "am335x-bone-jtag.dtsi" */
+#include "am335x-bone-common-univ.dtsi"
 
 / {
 	model = "TI AM335x BeagleBone";
 	compatible = "ti,am335x-bone", "ti,am33xx";
 
 	chosen {
-		base_dtb = "am335x-bone.dts";
+		base_dtb = "am335x-bone-uboot-univ.dts";
 		base_dtb_timestamp = __TIMESTAMP__;
 	};
+};
+
+&sgx {
+	status = "okay";
 };
 
 &ldo3_reg {
@@ -26,8 +30,4 @@
 
 &mmc1 {
 	vmmc-supply = <&ldo3_reg>;
-};
-
-&sgx {
-	status = "okay";
 };
