Add BeagleBoard.org DTBS: v5.4.x
https://github.com/beagleboard/BeagleBoard-DeviceTrees/tree/v5.4.x

https://github.com/beagleboard/BeagleBoard-DeviceTrees/commit/840f2ae70f681cb9c09a7e4e9120228bbf005946
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/arch/arm/boot/dts/omap4-panda-es-b3.dts
+++ b/arch/arm/boot/dts/omap4-panda-es-b3.dts
@@ -1,6 +1,9 @@
-// SPDX-License-Identifier: GPL-2.0-only
 /*
  * Copyright (C) 2012 Texas Instruments Incorporated - http://www.ti.com/
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License version 2 as
+ * published by the Free Software Foundation.
  */
 /dts-v1/;
 
@@ -10,18 +13,6 @@
 / {
 	model = "TI OMAP4 PandaBoard-ES";
 	compatible = "ti,omap4-panda-es", "ti,omap4-panda", "ti,omap4460", "ti,omap4430", "ti,omap4";
-};
-
-&emif1 {
-	cs1-used;
-	device-handle = <&elpida_ECB240ABACN>;
-	status = "ok";
-};
-
-&emif2 {
-	cs1-used;
-	device-handle = <&elpida_ECB240ABACN>;
-	status = "ok";
 };
 
 /* Audio routing is differnet between PandaBoard4430 and PandaBoardES */
@@ -58,7 +49,7 @@
 
 	button_pins: pinmux_button_pins {
 		pinctrl-single,pins = <
-			OMAP4_IOPAD(0x0fc, PIN_INPUT_PULLUP | MUX_MODE3) /* gpio_113 */
+			OMAP4_IOPAD(0x11b, PIN_INPUT_PULLUP | MUX_MODE3) /* gpio_113 */
 		>;
 	};
 };
