Add BeagleBoard.org DTBS: v5.9.x
https://github.com/beagleboard/BeagleBoard-DeviceTrees/tree/v5.9.x

https://github.com/beagleboard/BeagleBoard-DeviceTrees/commit/9860e687a88c8f9c1cff4cf0c12f61f37dd879e3
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/arch/arm/boot/dts/am5729-beagleboneai.dts
+++ b/arch/arm/boot/dts/am5729-beagleboneai.dts
@@ -26,6 +26,8 @@
 
 	chosen {
 		stdout-path = &uart1;
+		base_dtb = "am5729-beagleboneai.dts";
+		base_dtb_timestamp = __TIMESTAMP__;
 	};
 
 	memory@0 {
@@ -492,7 +494,7 @@
 	reset-gpios = <&gpio2 23 GPIO_ACTIVE_LOW>;
 	reset-delay-us = <2>;
 
-	phy0: ethernet-phy@1 {
+	phy0: ethernet-phy@4 {
 		reg = <4>;
 		eee-broken-100tx;
 		eee-broken-1000t;
