arm64: dts: ti: k3-am625-beagleplay: Add adc102s051 Add adc102s051 support. Tested on beaglePlay SBC https://www.beagleboard.org/boards/beagleplay
Signed-off-by: Sukrut Bellary <sukrut.bellary@linux.com>

--- a/arch/arm64/boot/dts/ti/k3-am625-beagleplay.dts
+++ b/arch/arm64/boot/dts/ti/k3-am625-beagleplay.dts
@@ -539,6 +539,15 @@
 			AM62X_MCU_IOPAD(0x0084, PIN_OUTPUT, 0) /* (A12) WKUP_CLKOUT0 */
 		>;
 	};
+
+	adc_spi_pins_default: adc-spi-default-pins {
+		pinctrl-single,pins = <
+			AM62X_MCU_IOPAD(0x0040, PIN_INPUT, 4) /* (D4) MCU_MCAN1_RX.MCU_SPI1_CLK */
+			AM62X_MCU_IOPAD(0x003c, PIN_INPUT, 3) /* (E5) MCU_MCAN1_TX.MCU_SPI1_CS1 */
+			AM62X_MCU_IOPAD(0x001c, PIN_INPUT, 3) /* (A6) MCU_UART0_CTSn.MCU_SPI1_D0 */
+			AM62X_MCU_IOPAD(0x0020, PIN_INPUT, 3) /* (B6) MCU_UART0_RTSn.MCU_SPI1_D1 */
+		>;
+	};
 };
 
 &a53_opp_table {
@@ -546,6 +555,23 @@
 	opp-1400000000 {
 		opp-hz = /bits/ 64 <1400000000>;
 		opp-supported-hw = <0x01 0x0004>;
+	};
+};
+
+&mcu_spi1 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&adc_spi_pins_default>;
+	#address-cells = <1>;
+	#size-cells= <0>;
+	ti,spi-num-cs = <2>;
+	status = "okay";
+
+	adc@1 {
+		compatible = "ti,adc102s051";
+		reg = <1>;
+		vref-supply = <&vdd_3v3>;
+		spi-max-frequency = <4000000>;
+		#io-channel-cells = <1>;
 	};
 };
 
