Add BeagleBoard.org Device Tree Changes
https://git.beagleboard.org/beagleboard/BeagleBoard-DeviceTrees/-/tree/v6.5.x

https://git.beagleboard.org/beagleboard/BeagleBoard-DeviceTrees/-/commit/23e155ab63feba42e075ce7c6d929b701083516b
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/arch/arm/boot/dts/ti/omap/am335x-osd335x-common.dtsi
+++ b/arch/arm/boot/dts/ti/omap/am335x-osd335x-common.dtsi
@@ -48,13 +48,14 @@
 
 	status = "okay";
 	clock-frequency = <400000>;
+	symlink = "bone/i2c/0";
 
 	tps: tps@24 {
 		reg = <0x24>;
 	};
 };
 
-/include/ "../../tps65217.dtsi"
+/include/ "tps65217.dtsi"
 
 &tps {
 	interrupts = <7>; /* NMI */
