--- a/arch/arm/boot/dts/ti/omap/am335x-boneblue.dts
+++ b/arch/arm/boot/dts/ti/omap/am335x-boneblue.dts
@@ -14,6 +14,8 @@
 
 	chosen {
 		stdout-path = &uart0;
+		base_dtb = "am335x-boneblue.dts";
+		base_dtb_timestamp = __TIMESTAMP__;
 	};
 
 	leds {
@@ -353,7 +355,7 @@
 	};
 };
 
-/include/ "../../tps65217.dtsi"
+/include/ "tps65217.dtsi"
 
 &tps {
 	/delete-property/ ti,pmic-shutdown-controller;
