ARM: dts: at91: enable device tree overlay support for SAM9X7 boards
Enbale support to build device tree overlays for sam9x75eb and
sam9x75_curiosity board

Signed-off-by: Manikandan Muralidharan <manikandan.m@microchip.com>
Reviewed-by: Varshini Rajendran <varshini.rajendran@microchip.com>

--- a/arch/arm/boot/dts/microchip/Makefile
+++ b/arch/arm/boot/dts/microchip/Makefile
@@ -11,6 +11,8 @@ DTC_FLAGS_at91-sama5d3_eds := -@
 DTC_FLAGS_at91-sama5d3_xplained := -@
 DTC_FLAGS_at91-sama5d4_xplained := -@
 DTC_FLAGS_at91-sama7g5ek := -@
+DTC_FLAGS_at91-sam9x75eb := -@
+DTC_FLAGS_at91-sam9x75_curiosity := -@
 dtb-$(CONFIG_SOC_AT91RM9200) += \
 	at91rm9200ek.dtb \
 	mpa1600.dtb
