ARM: dts: at91: sam9x7: update the macb node with fallback compatible string
The sam9x7 SoC uses the same sama7g5's Cadence GEM Etheret controller IP,
so using it as the fallback compatible string to successfully
probe the driver.

Signed-off-by: Manikandan Muralidharan <manikandan.m@microchip.com>
Acked-by: Varshini Rajendran <varshini.rajendran@microchip.com>

--- a/arch/arm/boot/dts/microchip/sam9x7.dtsi
+++ b/arch/arm/boot/dts/microchip/sam9x7.dtsi
@@ -1003,7 +1003,7 @@
 		};
 
 		gmac: ethernet@f802c000 {
-			compatible = "microchip,sam9x7-gem";
+			compatible = "microchip,sam9x7-gem", "microchip,sama7g5-gem";
 			reg = <0xf802c000 0x1000>;
 			interrupts = <24 IRQ_TYPE_LEVEL_HIGH 3		/* Queue 0 */
 				      60 IRQ_TYPE_LEVEL_HIGH 3          /* Queue 1 */
