--- a/arch/arm/boot/dts/microchip/at91-sam9x75_curiosity.dts
+++ b/arch/arm/boot/dts/microchip/at91-sam9x75_curiosity.dts
@@ -71,6 +71,14 @@
 	status = "okay";
 };
 
+&adc {
+	vddana-supply = <&vdd_3v3>;
+	vref-supply = <&vdd_3v3>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_adc_default>;
+	status = "okay";
+};
+
 &dbgu {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_dbgu>;
@@ -255,6 +263,12 @@
 			atmel,pins =
 				<AT91_PIOA 18 AT91_PERIPH_C AT91_PINCTRL_PULL_UP
 				 AT91_PIOA 19 AT91_PERIPH_C AT91_PINCTRL_PULL_DOWN>;
+		};
+	};
+
+	adc {
+		pinctrl_adc_default: adc-default {
+			atmel,pins = <AT91_PIOA 31 AT91_PERIPH_A AT91_PINCTRL_NONE>;
 		};
 	};
 
